--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -29,3 +29,11 @@ spring:
 azure:
   application-insights:
     instrumentation-key: ${rpe.AppInsightsInstrumentationKey:00000000-0000-0000-0000-000000000000}
+
+track-my-case:
+  url: ${TRACK_MY_CASE_URL}
+
+one-login:
+  email: ${ONE_LOGIN_EMAIL}
+  password: ${ONE_LOGIN_PASSWORD}
+  2fa: ${ONE_LOGIN_2FA}
