--- a/build.gradle
+++ b/build.gradle
@@ -131,6 +131,8 @@ ext {
   springBootVersion = "3.5.5"
   cucumber = "7.15.0"
   junitPlatform = "1.12.2"
+  selenium="4.11.0"
+  webdrivermanager="6.3.2"
 }
 
 ext['snakeyaml.version'] = '2.0'
@@ -138,7 +140,7 @@ ext['snakeyaml.version'] = '2.0'
 tasks.withType(Checkstyle).configureEach {
   def generatedDir = file("${buildDir}/generated/src/main/java").canonicalPath
   source = source.filter { file ->
-    !file.canonicalPath.startsWith(generatedDir)
+    file.canonicalPath.startsWith(generatedDir)
   }
 }
 
@@ -176,6 +178,8 @@ dependencies {
   integrationTestImplementation group: 'io.cucumber', name: 'cucumber-java', version: cucumber
   integrationTestImplementation group: 'io.cucumber', name: 'cucumber-spring', version: cucumber
   integrationTestImplementation group: 'io.cucumber', name: 'cucumber-junit-platform-engine', version: cucumber
+  integrationTestImplementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: selenium
+  integrationTestImplementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: webdrivermanager
 }
 
 rootProject.tasks.named("processIntegrationTestResources") {
