--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -29,6 +29,16 @@ jobs:
         with:
           submodules: recursive
 
+      - name: Install chrome
+        uses: browser-actions/setup-chrome@v2
+        with:
+          chrome-version: stable
+          install-chromedriver: true
+
+      - name: Show chrome version
+        run: |
+          chrome --version
+
       - name: Set up Gradle
         uses: gradle/actions/setup-gradle@v4
         with:
